--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Alphatest">
-        <receiver
-            android:name=".Receivers.allMsgsReceiver"
-            android:enabled="true"
-            android:exported="true"></receiver>
-        <receiver
-            android:name=".Receivers.ChargerReceiver"
-            android:enabled="true"
-            android:exported="true" />
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
+
+<!--        <rec\receiver-->
+<!--            android:name=".Receivers.AllMsgsReceiver"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true" >-->
+<!--        </receiver>-->
+
+<!--        <receiver-->
+<!--            android:name=".Receivers.ChargerReceiver"-->
+<!--            android:exported="true">-->
+<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
+<!--&lt;!&ndash;                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />&ndash;&gt;-->
+<!--&lt;!&ndash;                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&ndash;&gt;-->
+<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
+<!--        </receiver>-->
 
         <activity
             android:name=".activity5"
